Adição de informação

--- a/analysis and prediction.ipynb
+++ b/analysis and prediction.ipynb
@@ -836,7 +836,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Como visto, temos individuos com mais alto risco, e todos eles já tiveram pensamentos suicidas!"
+   ]
   }
  ],
  "metadata": {
